SFDCProject/src/objects/NE_Course__c.object
<CustomObject>
    <description>Course</description>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Cost ( Currency )</description>
        <inlineHelpText>Cost</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <description>Course Description</description>
        <inlineHelpText>Course Description</inlineHelpText>
        <label>Course Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course_Id__c</fullName>
        <description>Course Id</description>
        <inlineHelpText>Course Id</inlineHelpText>
        <label>Course Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Modality__c</fullName>
        <description>Course Modality</description>
        <inlineHelpText>Course Modality</inlineHelpText>
        <label>Course Modality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>Course Name</description>
        <inlineHelpText>Course Name</inlineHelpText>
        <label>Course Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <description>Course Type</description>
        <inlineHelpText>Course Type</inlineHelpText>
        <label>Course Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Hours__c</fullName>
        <description>Credit Hours</description>
        <inlineHelpText>Credit Hours</inlineHelpText>
        <label>Credit Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NE-{00000000}</displayFormat>
        <label>Course Name Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>